recursion.cons.lessons.recursion.cons.Reverse.scala.error
reverse:3: error: type mismatch;
 found   : Unit
 required: List[Int]
	if (l == Nil){
                     ^